# pupil_video_analysis

./: pyproject.toml  update.txt
pupil_video_analysis/: eye_interpolation_light_bind.py  fit_ellipse_with_light.py
tests/: test_pupil_video_analysis.py
