[tool.poetry]
name = "pupil_video_analysis"
version = "0.1.0"
description = ""
authors = ["2ki2ki <nikiyasy.klpsy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
nptyping = "^1.4.4"
scikit-image = "^0.19.1"
pathlib = "^1.0.1"
pandas = "^1.3.5"
opencv-python = "^4.5.5"
table = "^0.0.4"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
